--- a/app/views/spree/admin/campaigns/edit.html.erb
+++ b/app/views/spree/admin/campaigns/edit.html.erb
@@ -15,7 +15,7 @@
   </fieldset>
 <% end %>
 
-<div class="row">
+<div class="row campaign_products">
   <div class="col-8">
     <%= label_tag :products %><br />
     <table class="table">
@@ -25,17 +25,20 @@
           <td><%= product.name %></td>
           <td>
             <%= link_to t(:show), admin_product_path(product) %>
-            <%= link_to t(:delete), remove_product_admin_campaign_path(@campaign, product_slug: product.slug), method: :patch %>
+            <%= link_to t(:remove), remove_product_admin_campaign_path(@campaign, product_slug: product.slug), method: :patch %>
           </td>
         </tr>
       <% end %>
     </table>
-    <%= form_for [:admin, @campaign], url: {action: :add_product} do |f| %>
-      <%= f.field_container :products do %>
-        <%= label_tag Spree.t(:new) %>
-        <%= text_field_tag :product_slug, '', placeholder: :product_slug, class: 'fullwidth' %>
-      <% end %>
-      <%= f.submit Spree.t(:add) %>
-    <% end %>
   </div>
+</div>
+<div class="row campaign_products">
+  <div class="col-1">
+    <%= label_tag Spree.t(:add) %>
+  </div>
+  <div class="col-7">
+    <%= text_field_tag :q, '', class: 'fullwidth autocomplete' %>
+  </div>
+</div>
+<div class='row autocomplete_results' style='text-align:center;min-height: 400px'/>
 </div>
