"current image" translatable and fix reopen of modal

--- a/app/views/spree/admin/campaigns/_form.html.erb
+++ b/app/views/spree/admin/campaigns/_form.html.erb
@@ -58,8 +58,9 @@
       <%= form.label :image %> <span class="required">*</span><br />
       <%= form.file_field :image, class: 'fullwidth image', accept: 'image/png,image/gif,image/jpeg' %>
       <% if @campaign.image.exists? %>
-        <%= label_tag :current_image %>
+        <%= label_tag :current_image, t('current_image') %>
         <div class="image_preview">
+          <%= hidden_field_tag :current_image_url, @campaign.image.url(:original) -%>
           <%= link_to @campaign.image.url, target: '_blank' do %>
             <%= image_tag @campaign.image.url(:thumb) %>
           <% end %>
