--- a/app/assets/stylesheets/spree/backend/solidus_campaigns.css
+++ b/app/assets/stylesheets/spree/backend/solidus_campaigns.css
@@ -16,9 +16,16 @@
 }
 #crop_campaign_image_modal .content {
   width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
 }
 #crop_campaign_image_modal .buttons {
   margin-top: 2rem;
