--- a/app/views/spree/admin/campaigns/_form.html.erb
+++ b/app/views/spree/admin/campaigns/_form.html.erb
@@ -66,7 +66,8 @@
           <% end %>
         </div>
       <% end %>
-      <%= link_to 'Recortar', '', id: 'crop_campaign_image', class: 'button' %>
+      <%- aspect_ratio = CAMPAIGN_IMAGE_ASPECT_RATIO rescue '' -%>
+      <%= link_to 'Recortar', '', id: 'crop_campaign_image', class: 'button', 'data-aspect-ratio' => aspect_ratio %>
       <%= form.hidden_field :image_crop_x -%>
       <%= form.hidden_field :image_crop_y -%>
       <%= form.hidden_field :image_crop_w -%>
