--- a/app/assets/stylesheets/spree/backend/solidus_campaigns.css
+++ b/app/assets/stylesheets/spree/backend/solidus_campaigns.css
@@ -1,4 +1,4 @@
-#crop_campaign_image_modal {
+.crop_campaign_image_modal {
   position: fixed;
   top: 0;
   right: 0;
@@ -11,10 +11,10 @@
   background-color: rgba(0,0,0,.6);
   z-index: 10000;
 }
-#crop_campaign_image_modal.shown {
+.crop_campaign_image_modal.shown {
   display: flex;
 }
-#crop_campaign_image_modal .content {
+.crop_campaign_image_modal .content {
   width: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -27,13 +27,13 @@
   flex-direction: column;
   align-items: center;
 }
-#crop_campaign_image_modal .buttons {
+.crop_campaign_image_modal .buttons {
   margin-top: 2rem;
 }
-#crop_campaign_image {
+.crop_campaign_image {
   margin-top: 1rem;
 }
-#campaign_image {
+#campaign_image, #campaign_mobile_image {
   margin-bottom: 1rem;
 }
 .croppr-container img {
