--- a/app/views/spree/admin/campaigns/index.html.erb
+++ b/app/views/spree/admin/campaigns/index.html.erb
@@ -7,8 +7,9 @@
 <% end %>
 
 <% if @campaigns.any? %>
-  <table class="index">
+  <table class="index sortable" data-sortable-link="/admin/campaigns/update_positions">
     <colgroup>
+      <col style="width: 20px">
       <col style="width: 35%">
       <col style="width: 15%">
       <col style="width: 15%">
@@ -17,6 +18,7 @@
     </colgroup>
     <thead>
       <tr>
+        <th></th>
         <th class="title"><%= Spree::Campaign.human_attribute_name(:title) %></th>
         <th class="date"><%= Spree::Campaign.human_attribute_name(:start_at) %></th>
         <th class="date"><%= Spree::Campaign.human_attribute_name(:end_at) %></th>
@@ -28,6 +30,9 @@
     <tbody>
       <% @campaigns.each do |campaign| %>
         <tr class="<%= cycle('odd', 'even') %>" id="<%= spree_dom_id campaign %>">
+          <td>
+            <span class="handle"></span>
+          </td>
           <td><%= campaign.title %></td>
           <td><%= l(campaign.start_at) rescue '-' %></td>
           <td><%= l(campaign.end_at) rescue '-' %></td>
